tests/compile-fail/alloc/reallocate-dangling.stderr
error: Undefined Behavior: pointer to alloc962 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `std::alloc::realloc` at rustc_src/src/alloc.rs:124:14
note: inside `main` at $DIR/reallocate-dangling.rs:9:18
  --> $DIR/reallocate-dangling.rs:9:18
   |
LL |         let _z = realloc(x, Layout::from_size_align_unchecked(1, 1), 1);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

